@@ -1,4 +1,5 @@
 Serf 0.1.3 []
+  Fix segfault with epoll when removing a NULL socket.
   Send current version string in the test programs (Issue 21)
 
 Serf 0.1.2 [2007-6-18, r1114]
